--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/mandarin.ico">
+  <meta name="Avid Learner" content="Avid Learner">
+  <meta name="Kleyber Santiago" content="862241721">
 
-  <title>John Doe - Business Administration</title>
+  <title>Kleyber Santiago - Business Administration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Kleyber Santiago</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/kleybersantiago.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Kleyber Santiago
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">Student<br><br>
 
-        Enter bio here<br><br>
-
-        Enter bio here
+       I am an 18 year old male student who is currently attending the University of California Riverside for the very first time. I am enrolled in the pre-business program in order to eventually qualify for the School of Business. I do not have experience as of yet in any job as I have not gotten the opportunity due having my sole focus on school. Past experiences that I do have are all school related. In high school I participated in STEM heavy programs such as PLTW, MESA, Robotics, and ACE. In each program I managed to learn about engineering, programming, and team building. As part of each program, I competed in a combined 17 different competitions. In each competition, our school always made sure to leave with a prize. With my knowledge in programming and engineering, I have managed to continue to hone my skills as I have helped teach others how to program. I also currently am part of an intro to computer science class where I continue to learn new and innovating ways of doing things in a technological sense. If I could describe myself in a few words, it would be prepared, knowledgeable, straight to the point, and always learning. I believe no one ever stops learning, as there is always something new to discover.
+<br><br>
+         I believe that any job that hires me is one that will be taken to the next level. Although I mentioned that i do not currently have any job experience, I believe I possess the necessary skills to help make a company successful. I am someone who is determined to leave a place better than I found it. I believe that you get what you put into a job, and I strive to work at my best everyday. With my knowledge I know I can be a valuable asset to any company. Whether it’d be independent work or group work, I can work under any circumstances and any pressure. Some other accomplishments I gained in school are 3 principal awards, placed on honor roll in all my years of school, and a 2-time spelling bee winner. The reason I mention these awards is to show that I can compete with others if necessary and that I can do as instructed. Another valuable asset that I possess and that I believe is valuable to any company, is the fact that I have a diverse background as a latino. As alatino, I am both an english and spanish speaker, and can translate if necessary. I also bring a different point of view to a company and offer the diversity that is desperately needed in many companies. What many may think is a good idea in their own views, I can offer my own ideas from my own perspective to show others what they may not understand. Other skills I possess include experience in graphic design, 3D modeling, and photography. Through my creative and technological skills, I don’t see why it would be anything but the right decision to make to hire me for work. I may not have past experience, but I believe that with what I have to offer, I contain lots of potential.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="linkedin" href="https://linkedin.com">
+          <a target="_blank" id="linkedin" href="https://www.linkedin.com/in/kleyber-santiago-3b69a6186">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="github" href="https://github.com">
+          <a target="_blank" id="github" href="https://github.com/KleyberSantiago">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="twitter" href="https://twitter.com">
+          <a target="_blank" id="twitter" href="https://twitter.com/UCRiverside">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="email" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="email" href="mailto:santiagokleyber02@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,45 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Co-Captain of Robotics Team</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mhs.inglewoodusd.com/">Morningside High</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+            • helped new recruits learn to build and program<br>
+            • Programmed and built robots for monthly competitions<br>
+            • Made it to Semi-Finals in Robotics competition<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">August 2016 - March 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">MESA member</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mhs.inglewoodusd.com/">Morningside High</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Worked with others to come up with innovative launching device for state wide competition<br>
+              • Took pictures on trips to hand to class historian<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2016 - March 2020</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">ACE member</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mhs.inglewoodusd.com/">Morningside High</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
+             • Worked with Turner company mentors to build mock building<br> 
+              • Participated in various city wide competitions<br>
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2017 - January 2020</span>
           </div>
         </div>
 
@@ -152,33 +149,10 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Pre Business</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">October 2020 - Present</span>
           </div>
         </div>
 
@@ -191,7 +165,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image1.jpg" width="500px">
+            <img src="img/image2.jpg" width="500px">
+            <img src="img/image3.jpg" width="500px">
+            <img src="img/image4.jpg" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +176,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Kleyber Santiago</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
